TestSuite/errors/err0420.pas
function f(i: integer): boolean;
begin
  
end;
begin
  repeat
    
  until f;
end.